--- a/public/html/index.html
+++ b/public/html/index.html
@@ -10,12 +10,12 @@
 	<script type="text/javascript" src="../js/kinetic.js"></script>
 	<!-- <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script> -->
 	<script type="text/javascript" src="../js/jquery.min.js"></script>
-	<script type="text/javascript" src="../js/prefixfree.min.js"></script>
 	<!-- <link rel="stylesheet" href="http://code.jquery.com/ui/1.11.0/themes/humanity/jquery-ui.css"> --> 
 	<link rel="stylesheet" href="../css/jquery-ui.css">
   	<!-- <script src="http://code.jquery.com/ui/1.11.0/jquery-ui.js"></script> -->
   	<script type="text/javascript" src="../js/jquery-ui.js"></script>
   	<script type="text/javascript" src="../js/socket.io.js"></script>
+  	<!-- <script type="text/javascript" src="../js/jquery.dice.js"></script> -->
 
   	<!-- скрипты системы -->
   	<script type="text/javascript" src="../js/game/game.js"></script>
@@ -29,8 +29,11 @@
 </head>
 <body onmousedown='return false;'>
 
+	<button id='shakeButton'>Кидать кости</button>
+	<div class="dice d1"></div>
+	<div class="dice d2"></div>
     <div id='container'>
-        
+    
 	</div>
 	
 </body>
